use Files.readString